--- a/addTimetable.html
+++ b/addTimetable.html
@@ -264,7 +264,8 @@ timetableForm.addEventListener('submit', async (e) => {
         endTime: selectedEndTime,
         day: selectedDay,
         lecturerTutor: loggedInUser,
-        approved: false
+        approved: false,
+		rejection: false,
     };
 
     try {
