--- a/lecTimetableManagement.html
+++ b/lecTimetableManagement.html
@@ -359,7 +359,8 @@ async function saveCancellationDetails() {
     const cancellationData = {
         date: selectedDate,
         timetableId: timetableId,
-        approved: false
+        approved: false,
+		rejection: false
     };
 
     try {
