--- a/adminMain.html
+++ b/adminMain.html
@@ -24,6 +24,7 @@
 <a href="#" class="btn btn-primary btn-block mb-3 approve-student-info-btn">Approve Student Information</a>
 <a href="timetable.html" class="btn btn-primary btn-block mb-3">Timetable</a>
 <a href="attendanceTimetableList.html" class="btn btn-primary btn-block mb-3 attendance-btn">Attendance</a>
+<a href="assignAssignmentTask.html" class="btn btn-primary btn-block mb-3 assignment-btn">Assignment</a>
 <a href="addLocation.html" class="btn btn-primary btn-block mb-3 location-btn">Add Location</a>
 <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
 
@@ -69,6 +70,7 @@
 				title.textContent = "Admin Main Page";
                     // Hide attendance for administrators
                     document.querySelector(".attendance-btn").style.display = "none";
+					document.querySelector(".assignment-btn").style.display = "none";
 					document.querySelector(".location-btn").style.display = "block";
 					document.querySelector(".container").style.display = "block";
                 } else if (userType === "lecturer" || userType === "tutor") {
