--- a/adminMain.html
+++ b/adminMain.html
@@ -24,7 +24,7 @@
 <a href="#" class="btn btn-primary btn-block mb-3 approve-student-info-btn">Approve Student Information</a>
 <a href="timetable.html" class="btn btn-primary btn-block mb-3">Timetable</a>
 <a href="attendanceTimetableList.html" class="btn btn-primary btn-block mb-3 attendance-btn">Attendance</a>
-<a href="assignAssignmentTask.html" class="btn btn-primary btn-block mb-3 assignment-btn">Assignment</a>
+<a href="assignmentActivities.html" class="btn btn-primary btn-block mb-3 assignment-btn">Assignment</a>
 <a href="addLocation.html" class="btn btn-primary btn-block mb-3 location-btn">Add Location</a>
 <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
 
