--- a/assignmentDetail.html
+++ b/assignmentDetail.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+	<style>
+    .comment {
+        border-bottom: 1px solid #eee;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+    }
+</style>
+
 </head>
 <body>
 
@@ -32,6 +40,14 @@
                 <div class="card-footer">
                     <button id="likeButton" class="btn btn-outline-primary">Like</button>
                     <span id="likeCount">0 Likes</span>
+					
+					<!-- Comments Section -->
+    <div id="assignmentComments" class="mt-4">
+        <h4>Comments</h4>
+        <div id="commentsContainer">
+            <!-- Comments will be dynamically inserted here -->
+        </div>
+    </div>
                 </div>
             </div>
         </div>
@@ -129,6 +145,7 @@ function updateUI(assignment) {
                 return;
             }
             updateUI(doc.data());
+			fetchCommentsAndUpdateUI(assignmentId);
         }).catch(error => console.error("Error getting document:", error));
     }
 
@@ -151,6 +168,32 @@ function updateUI(assignment) {
             }).catch(error => console.error("Error updating likes:", error));
         });
     }
+	
+	function fetchCommentsAndUpdateUI(assignmentId) {
+    const commentsContainer = document.getElementById("commentsContainer");
+    commentsContainer.innerHTML = ''; // Clear existing comments
+
+    db.collection("assignments").doc(assignmentId).collection("comments")
+        .orderBy("timestamp", "desc") // Assuming you want the newest comments first
+        .get()
+        .then(querySnapshot => {
+            querySnapshot.forEach(doc => {
+                const comment = doc.data();
+                const commentElement = document.createElement("div");
+                commentElement.classList.add("comment");
+
+                // Format timestamp
+                const commentDate = comment.timestamp ? comment.timestamp.toDate().toLocaleString() : "Unknown date";
+
+                // Assuming userId can be mapped to a username, if needed. For simplicity, just using userId here.
+                commentElement.innerHTML = `<p><strong>${comment.userId}</strong> on ${commentDate}</p><p>${comment.commentText}</p>`;
+                commentsContainer.appendChild(commentElement);
+            });
+        })
+        .catch(error => {
+            console.error("Error fetching comments:", error);
+        });
+}
 });
 
 </script>
